--- a/app/views/spree/admin/shipments/index.html.erb
+++ b/app/views/spree/admin/shipments/index.html.erb
@@ -69,7 +69,7 @@
       <tr data-hook="admin_shipments_index_rows" class="state-<%= shipment.state.downcase %> <%= cycle('odd', 'even') %>">
         <td><%= l shipment.created_at.to_date %></td>
         <td><%= link_to shipment.number, spree.edit_admin_shipment_path(shipment) %></td>
-        <td><span class="state <%= shipment.state.downcase %>"><%= Spree.t("shipment_state.#{shipment.state.downcase}") %></span></td>
+        <td><span class="state <%= shipment.state.downcase %>"><%= Spree.t("shipment_states.#{shipment.state.downcase}") %></span></td>
         <td> <%= shipment.display_item_cost.to_html %></td>
         <td ><%= shipment.display_cost.to_html %></td>
         <td><%= Spree::Money.new(shipment.tax_total, currency: shipment.currency).to_html %></td>
