--- a/app/views/spree/admin/shared/_supplier_order_total.html.erb
+++ b/app/views/spree/admin/shared/_supplier_order_total.html.erb
@@ -1,5 +1,5 @@
 <% if try_spree_current_user.supplier? %>
-  <%= order.supplier_total(try_spree_current_user).to_html %>
+  <%= order.supplier_total_commissions(try_spree_current_user).to_html %>
 <% else %>
   <%= order.display_total.to_html %>
 <% end %>
